--- a/package.json
+++ b/package.json
@@ -12,24 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.3.6",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/router": "^4.3.6",
+    "angular-bootstrap-md": "^4.3.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
+    "hammerjs": "^2.0.8",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.31",
     "npm": "^5.4.0",
-    "popper": "^1.0.0",
     "rxjs": "^5.4.2",
     "tether": "^1.4.0",
     "zone.js": "^0.8.14"
