--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
+    "fstream": "^1.0.11",
     "hammerjs": "^2.0.8",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
+    "mkdir": "0.0.2",
     "mongodb": "^2.2.31",
     "npm": "^5.4.0",
     "rxjs": "^5.4.2",
