--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.2.1",
     "mkdir": "0.0.2",
     "mongodb": "^2.2.31",
+    "multiparty": "^4.1.3",
     "npm": "^5.4.0",
     "rxjs": "^5.4.2",
     "tether": "^1.4.0",
