--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "mkdir": "0.0.2",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.31",
+    "mongoose": "^4.11.10",
     "multiparty": "^4.1.3",
     "npm": "^5.4.0",
     "rxjs": "^5.4.2",
