Added file to upload and parse .xls files

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "npm": "^5.4.0",
     "rxjs": "^5.4.2",
     "tether": "^1.4.0",
+    "xls-to-json-lc": "^0.3.4",
+    "xlsx-to-json-lc": "^0.5.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
